--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
@@ -1,4 +1,5 @@
 <script th:src="@{/js/vue/vue.js}" charset="utf-8"></script>
+<!-- <script th:src="@{/plugins/bluebird/bluebird.core.min.js}" charset="utf-8"></script> -->
 <script th:src="@{/js/vueplugins.js}" charset="utf-8"></script>
 <script th:src="@{/js/framework/jquery-1.12.4.js}" charset="utf-8"></script>
 <script th:src="@{/js/underscore/underscore-min-1.9.1.js}" charset="utf-8"></script>
