--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menuDialog.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menuDialog.html
@@ -10,7 +10,7 @@
     <div id="app" style="height: 100%;width: 100%;">
         <ll-container style="height: 100%; ">
             <ll-main style="padding: 0 0 0 0px;" style="height: 100%; ">
-                <ll-form id="ajaxform" cols="1" colproportion="1:5" showchanged="True" label-width="100px" style="width:80%;">
+                <ll-form label-width="100px" style="width:80%;">
                     <ll-form-item label="名称">
                         <ll-input v-model="form.name"></ll-input>
                     </ll-form-item>
