--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/role/bind-menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/role/bind-menu.html
@@ -11,13 +11,13 @@
         <ll-container style="height: 100%; ">
             <ll-main style="padding: 0 0 0 0px;" style="height: 100%; ">
                 <ll-tree-zz ref="tree" :props="defaultProps" :datasource="datasource" accordion show-checkbox>
-                    <span slot-scope="{ node, data }" class="custome_tree_node">
-                        <span>{{ node.label }}</span>
+                    <span slot-scope="scope" class="custome_tree_node">
+                        <span>{{ scope.node.label }}</span>
                         <span>
 	                        <span>
-	                            <ll-checkbox-group ref="checkBoxGroup" v-model="data.prop6" @change="groupChange(data)">
-	                                <ll-checkbox :label="'1'" :key="data.code+'1'">读</ll-checkbox>
-	                                <ll-checkbox :label="'2'" :key="data.code+'2'">写</ll-checkbox>
+	                            <ll-checkbox-group ref="checkBoxGroup" v-model="scope.data.prop6" @change="groupChange(scope.data)">
+	                                <ll-checkbox :label="'1'" :key="scope.data.code+'1'">读</ll-checkbox>
+	                                <ll-checkbox :label="'2'" :key="scope.data.code+'2'">写</ll-checkbox>
 	                            </ll-checkbox-group>
 	                        </span>
                         </span>
@@ -69,10 +69,9 @@
                 });
 			},
 			canc:function(){
-
          	   $.close();
 			},
-			groupChange(data,b,c){
+			groupChange:function(data,b,c){
 				var menuRole = data.nodeBean;
 				var newMenuRole;
 				newMenuRole={
