--- a/01SOURCE/vue/vuell/src/lib/css/base.less
+++ b/01SOURCE/vue/vuell/src/lib/css/base.less
@@ -66,6 +66,13 @@
   -webkit-box-sizing: border-box;
   /* Safari */
 }
+.el-tabs--border-card>.el-tabs__content {
+  padding: 0px;
+}
+.el-tabs__content .el-tab-pane{
+  height: 100%;
+  width: 100%;
+}
 .el-tabs__header{
   margin: 0 0 0px;
 }
